k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  rules:
    - host: 29137147-cf8f-4673-a55a-028b2b89af31.lb.civo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aaa-service
                port:
                  number: 8081
          - path: /app2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bbb-service
                port:
                  number: 8082
          - path: /app3(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ddd-service
                port:
                  number: 8084
          - path: /app4(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: eee-service
                port:
                  number: 8085
